fix footer alignment

--- a/public/output.css
+++ b/public/output.css
@@ -1125,6 +1125,10 @@ video {
   padding-top: 1rem;
 }
 
+.pt-0 {
+  padding-top: 0px;
+}
+
 .text-center {
   text-align: center;
 }
